# XiaoHongshu_Collection

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  claude-template.md  package-lock.json  package.json  xhs-collection-export-skill.md  启动小红书保存入口.bat
prj/Notes_Video_Collection/prj/: README.md  pyproject.toml
prj/Notes_Video_Collection/prj/src/video_summary_cli/: __init__.py  artifact_writer.py  batch_runner.py  batch_workspace.py  chapter_builder.py  chapter_visual_binding.py  chaptering.py  cli.py  fetcher.py  frame_sampler.py  markdown_renderer.py  models.py  multi_platform_fetcher.py  note_styles.py  openai_compatible.py  paths.py  pipeline.py  ports.py  presentation_builder.py  quality_report_builder.py  runtime_factory.py  scene_card_builder.py  screenshot_caption_builder.py  (+16 more)
prj/Notes_Video_Collection/prj/tests/: test_artifact_writer.py  test_batch_runner.py  test_batch_workspace.py  test_chapter_builder.py  test_cli.py  test_fetcher_helpers.py  test_frame_sampler.py  test_markdown_renderer.py  test_multi_platform_fetcher.py  test_note_styles.py  test_openai_compatible.py  test_packaging.py  test_paths.py  test_pipeline.py  test_presentation_builder.py  test_release_verifier.py  test_root_batch_scripts.py  test_scene_card_builder.py  test_screenshot_caption_builder.py  test_screenshot_selector.py  test_source_detector.py  test_storage.py  test_subtitle_parser.py  test_text_normalizer.py  test_transcriber.py  test_web_app.py  test_web_batch.py  test_web_config.py  test_xiaohongshu_fetcher.py  test_xiaohongshu_parser.py  test_xiaohongshu_summary_quality.py
(+336 files in other folders)
